2009-04-25 Andreas Radke <andyrtr at archlinux.org>

        * 3.0.99.7-1 :
	new upstream release, OOo 310_m11=3.1.0rc2
	fix project url
	rediff the ArchLinux.patch - will send it upstream now

2009-04-25 Andreas Radke <andyrtr at archlinux.org>

        * 3.0.99.6-1 :
	new upstream pre-release
	manually install all built dicts+extension

2009-04-04 Andreas Radke <andyrtr at archlinux.org>

        * 3.0.99.4-1 :
	initial ArchLinux pkg
	based on the vanilla OOo-base-beta pkg
	known issue: Xfce menu does not show icons
	and dictionaries are not present