@@ -4,7 +4,7 @@
 pkgname=go-openoffice
 pkgver=3.0.99.7
 _GOver=3.0.99.7
-pkgrel=1
+pkgrel=2
 pkgdesc="OpenOffice.org - go-oo.org enhanced version of SUN's office suite"
 arch=('i686' 'x86_64')
 _go_tree="OOO310"
@@ -13,18 +13,21 @@ _ootag=ooo310-m11 # = OOo 3.1.0 RC2
 license=('LGPL3')
 url="http://go-oo.org/"
 install=${pkgname}.install
-depends=("curl>=7.19.4" "hunspell>=1.2.8" "python>=2.6.1" 'libwpd' 'redland' 'gstreamer0.10-base-plugins>=0.10.22'
-         'libxaw' "neon>=0.28.3-2" "icu>=4.0-2" 'hsqldb-java' 'libxslt' 'libxtst' 'desktop-file-utils' 'mono>=2.4')
+depends=("curl>=7.19.4" "hunspell>=1.2.8" "python>=2.6.1" 'libwpd' 'redland' 
+         'libxaw' "neon>=0.28.3-2" "icu>=4.0-2" 'hsqldb-java' 'libxslt' 'libxtst' 'desktop-file-utils')
 optdepends=('java-runtime:	adds java support'
             'libcups:		adds printing support'
             'gconf:		adds additional gnome support'
             'nss:		adds support for signed files/macros'
             'pstoedit:		translates PostScript and PDF graphics into other vector formats'
 	    'poppler:		for the pdfimport extension'
-	    'mesa:		for the OGLTrans extension')
+	    'mesa:		for the OGLTrans extension'
+	    'mono:		allows UNO automation with Mono'
+	    'gstreamer0.10-base:	+ some gstr-plugins to support multimedia content, e.g. in impress')
 makedepends=('automake' 'autoconf' 'wget' 'bison' 'findutils' 'flex' 'gawk' 'gcc-libs' 'libart-lgpl'
 	'pam' 'sane' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.0.10" 'apache-ant' 'cairo' 
-	'gperf' 'libcups' 'pstoedit' 'gconf' "openjdk6>=1.4" 'unixodbc' 'mesa>=7.4' 'poppler>=0.10.5') # 'boost' # 'libjpeg' 
+	'gperf' 'libcups' 'pstoedit' 'gconf' "openjdk6>=1.4" 'unixodbc' 'mesa>=7.4' 'poppler>=0.10.5'
+	'gstreamer0.10-base>=0.10.22'  'mono>=2.4') # 'boost' # 'libjpeg' 
 provides=('openoffice-base')
 conflicts=('openoffice-base')
 _mirror="http://download.go-oo.org/"
@@ -89,6 +92,11 @@ build() {
 	autoreconf
 
 	export ARCH_FLAGS="${CXXFLAGS}"
+
+	if [ "$CARCH" = "x86_64" ]; then
+	      EXTRAOPTS="--without-stlport"
+	 else EXTRAOPTS="--with-stlport"
+	fi
 
 	./configure --with-distro=ArchLinux \
 		--with-build-version="${_GOver} ArchLinux build-${pkgrel} (${_OO_milestone})" \
